--- a/src/app/homePage/homePageStyle.scss
+++ b/src/app/homePage/homePageStyle.scss
@@ -17,32 +17,97 @@
     font-weight: 400;
     line-height: 26px;
 }
-.hero_heading button{
-    background-color: #ff5042;
-    color: #fff;
-    padding: 12px 24px;
-    border-radius: 5px;
-    margin-top: 30px;
-    font-size: 18px;
-    font-weight: 600;
-    border: 1px solid #ff5042;
-    transition: all ease-in-out 0.3s;
-    &:hover{
-        background-color: #ee3326;
+
+.rotate_item {
+    animation: rotation 30s infinite linear;
+}
+
+@keyframes rotation {
+    from {
+        transform: rotate(360deg);
+    }
+
+    to {
+        transform: rotate(0deg);
     }
 }
-.hero_heading .border_btn{
+
+// ********************tabs-start***************************
+.tab_list {
+    box-shadow: none !important;
+    padding-top: 20px;
+}
+
+.tab_btns {
+    padding: 20px;
+    display: flex;
+    align-items: flex-start;
+    max-width: 610px;
+    background-color: var(--bg-color3) !important;
+    color: var(--text-color-dark);
+
+    h2 {
+        font-size: 20px;
+        margin-bottom: 5px;
+        font-weight: 600;
+    }
+
+    p {
+        font-weight: 400;
+        font-size: 16px;
+        margin-bottom: 0;
+    }
+}
+
+.css-1mad5hb-JoyTab-root[aria-selected="true"],
+.css-1q8wenp-JoyTab-root[aria-selected="true"] {
+    box-shadow: 0px 10px 60px rgba(3, 17, 44, .15);
+    padding: 20px;
+    background-color: var(--bg-color3);
+    color: var(--text-color-dark);
+    border-radius: 10px;
+    z-index: 1;
+}
+
+.css-1q8wenp-JoyTab-root::after,
+.css-1mad5hb-JoyTab-root::after {
     background-color: transparent;
-    color: #fff;
-    padding: 12px 24px;
-    border-radius: 5px;
-    margin-top: 30px;
-    font-size: 18px;
-    font-weight: 600;
-    border: 1px solid #fff;
-    transition: all ease-in-out 0.3s;
-    &:hover{
-        background-color: #fff;
-        color: #052c47;
+}
+
+.css-64esqk-JoyTabPanel-root {
+    padding: 0 60px;
+}
+
+.css-6zeqf7-JoyTabs-root {
+    background-color: transparent;
+}
+
+//   ********************************end**********************************
+.center_content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: var(--text-color-dark);
+    margin-bottom: 30px;
+
+    h2 {
+        font-size: 36px;
+        font-weight: 600;
+        max-width: 760px;
+        margin-bottom: 16px;
+    }
+
+    p {
+        font-size: 20px;
+        line-height: 26px;
+        text-align: center;
+        max-width: 760px;
+        font-weight: 400;
+        font-family: "DM Sans", "Noto Sans", helvetica, arial, sans-serif;
+
+        span {
+            font-weight: 700;
+        }
     }
 }
