--- a/src/app/header/headerStyle.scss
+++ b/src/app/header/headerStyle.scss
@@ -1,9 +1,7 @@
 .header {
     width: 100%;
     height: 60px;
-
     color: aliceblue;
-
     .header_tabs ul {
         display: flex;
         align-items: center;
@@ -18,7 +16,7 @@
             justify-content: center;
             padding: 0 20px;
             text-transform: capitalize;
-            font-size: 18px;
+            font-size: 16px;
             font-weight: 500;
             opacity: .8;
             transition: all ease-in-out 0.2s;
@@ -40,7 +38,7 @@
     // background-color: transparent;
     background: linear-gradient(126.85deg, #052c47 -36.13%, #026494 98.05%);
 }
-.orm_logo{
+.siteLogo{
     background-color: #fff;
     color: rgb(23, 77, 94);
     padding: 14px 16px;
@@ -53,4 +51,21 @@
         font-size: 14px;
         font-weight: 400;
     }
+}
+
+.navWrap ul{
+    display: flex;
+    align-items: center;
+    list-style: none;
+    padding: 0;
+    grid-gap: 50px;
+    font-weight: 500;
+    margin: 0;
+}
+
+
+.siteHeader {
+    position: fixed;
+    width: 100vw;
+    padding: 25px 0px;
 }
