--- a/public/assets/style/customStyle.scss
+++ b/public/assets/style/customStyle.scss
@@ -1,3 +1,14 @@
+:root {
+  --primary: #3B8AD2;
+  --secondary: #ff5042;
+  --tertiary: #51AFA7;
+  --white: #ffffff;
+  --text-color-dark: #053247;
+  --bg-color1: linear-gradient(126.85deg, #052c47 -36.13%, #026494 98.05%);
+  --bg-color2: #f7f7f8;
+  --bg-color3: #fff;
+}
+
 .sectionPadding {
   padding: 100px 0px;
   scroll-margin-top: 100px;
@@ -7,7 +18,247 @@
   }
 }
 
-img {
-  max-width: 100%;
-  height: auto;
+.sectionPadding2 {
+  padding: 50px 0px;
+  scroll-margin-top: 50px;
+
+  @media (max-width: 1200px) {
+    padding: 40px 0px;
+  }
 }
+
+.container_1000 {
+  max-width: 1000px !important;
+}
+
+.bg_gray {
+  background-color: var(--bg-color2);
+}
+
+.bg_dark {
+  background-image: var(--bg-color1);
+}
+
+.white_font {
+  color: #fff;
+}
+
+.dark_font {
+  color: var(--text-color-dark) !important;
+}
+
+.font_700 {
+  font-weight: 700 !important;
+}
+
+.text_20 {
+  font-size: 20px !important;
+}
+
+.text_24 {
+  font-size: 24px ;
+}
+
+.title_section {
+  h1 {
+    font-size: 36px;
+    color: var(--text-color-dark);
+    font-weight: 600;
+    margin-bottom: 15px;
+  }
+
+  p {
+    margin-bottom: 20px;
+    font-size: 20px;
+    color: var(--text-color-dark);
+  }
+}
+
+.item_center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.brand_box_container {
+  max-width: 1000px;
+}
+
+.brand_box {
+  width: 148px;
+  height: 135px;
+  background-color: var(--bg-color3);
+  padding: 25px;
+  border-radius: 5px;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin: 20px 20px;
+  cursor: pointer;
+  transition: all ease-in-out 0.2s;
+
+  &:hover {
+    transform: scale(1.1);
+  }
+
+  .brand_logo {
+    max-width: 50px;
+    max-height: 50px;
+    background-size: contain;
+    background-position: center;
+    margin-bottom: 10px;
+  }
+
+  p {
+    font-size: 16px;
+    text-transform: capitalize;
+    color: var(--text-color-dark);
+    margin: 0;
+    font-weight: 500;
+  }
+}
+
+// ***************marquee-start*********************
+.marquee {
+  border-bottom: 1px solid #e8e9ed;
+
+  p {
+    font-size: 20px;
+    background-color: #e8e9ed;
+    width: 190px;
+    height: 119px;
+    font-weight: 500;
+    margin-bottom: 0;
+    box-shadow: 65px 2px 75px -17px rgba(167, 166, 166, 0.884),
+      -25px 0px 20px -20px rgba(207, 206, 206, 0.884);
+  }
+
+  .img_row {
+    padding: 29px 10px;
+  }
+
+  .marquee_img {
+    margin: 0 20px;
+    background-position: center;
+    background-size: contain !important;
+    max-width: 60px;
+    max-height: 60px;
+  }
+}
+
+.marquee_card {
+  background: #fff;
+  width: 360px;
+  height: 190px;
+  border-radius: 4px;
+  box-shadow: 0px 10px 60px rgba(3, 17, 44, .15);
+  padding: 20px;
+  margin: 0 10px;
+  color: var(--text-color-dark);
+  height: 100%;
+
+  .card_profile_img {
+    max-width: 40px;
+    height: 40px;
+    background-position: center;
+    object-fit: cover;
+    border-radius: 100px;
+  }
+
+  h5 {
+    font-size: 16px;
+    font-weight: 700;
+    margin-bottom: 10px;
+  }
+
+  span {
+    font-size: 14px;
+    margin-bottom: 0;
+  }
+}
+
+// **************marquee-end***********************
+
+// **************button***********************
+.prime_btn {
+  background-color: #ff5042;
+  color: #fff;
+  padding: 12px 24px;
+  border-radius: 5px;
+  margin: 10px;
+  font-size: 18px;
+  text-transform: capitalize;
+  font-weight: 600;
+  border: 1px solid #ff5042;
+  transition: all ease-in-out 0.3s;
+
+  &:hover {
+    background-color: #ee3326;
+  }
+}
+
+.border_btn {
+  background-color: transparent;
+  color: #fff;
+  padding: 12px 24px;
+  border-radius: 5px;
+  margin: 10px;
+  font-size: 18px;
+  text-transform: capitalize;
+  font-weight: 600;
+  border: 1px solid #fff;
+  transition: all 0.3s;
+
+  &:hover {
+    background-image: var(--bg-color1);
+    color: var(--bg-color3);
+  }
+}
+
+.dark_btn {
+  color: var(--text-color-dark);
+  border: 1px solid #c3c7ce;
+
+}
+
+// ********************end**************************
+.info_wrap_content h2 {
+  font-size: 48px;
+  font-weight: 700;
+  color: var(--text-color-dark);
+  line-height: 62.5px;
+  margin-bottom: 30px;
+}
+
+.info_wrap_content p {
+  color: var(--text-color-dark);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+  -webkit-font-smoothing: antialiased;
+  font-family: "DM Sans", "Noto Sans", helvetica, arial, sans-serif;
+}
+
+.divider {
+  background-color: var(--bg-color2);
+  width: 2px;
+  height: 40px;
+  margin: 5px 20px;
+  opacity: 0.8;
+}
+
+// ***********************blur-bacground****************************
+.image_bg {
+  background-image: url("/images/fixed-1.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
+.content_bg { 
+  backdrop-filter: blur(10px);
+}  
+  
+
+// *****************************************************************
