--- a/src/app/homePage/homePageStyle.scss
+++ b/src/app/homePage/homePageStyle.scss
@@ -1,6 +1,10 @@
 .hero_banner {
     background: linear-gradient(126.85deg, #052c47 -36.13%, #026494 98.05%);
 }
+.hero_img{
+    max-width: 600px;
+    max-height: 600px;
+}
 
 .hero_heading h2 {
     font-size: 48px;
