--- a/public/assets/style/customStyle.scss
+++ b/public/assets/style/customStyle.scss
@@ -4,7 +4,7 @@
   --tertiary: #51AFA7;
   --white: #ffffff;
   --text-color-dark: #053247;
-  --bg-color1: linear-gradient(126.85deg, #052c47 -36.13%, #026494 98.05%);
+  --bg-color1: linear-gradient(126.85deg, #1c0547 -36.13%, #027c94 98.05%);
   --bg-color2: #f7f7f8;
   --bg-color3: #fff;
 }
@@ -37,6 +37,9 @@
 
 .bg_dark {
   background-image: var(--bg-color1);
+}
+.bg_white{
+  background-color: var(--bg-color3);
 }
 
 .white_font {
@@ -249,16 +252,80 @@
   opacity: 0.8;
 }
 
-// ***********************blur-bacground****************************
+// ***********************blur-background****************************
 .image_bg {
-  background-image: url("/images/fixed-1.jpg");
+  background-image: url("/images/fixed-3.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
 }
 .content_bg { 
-  backdrop-filter: blur(10px);
+  backdrop-filter: blur(5px);
+  background-color: #0532476a;
 }  
   
 
 // *****************************************************************
+
+// ***********************flip-card************************
+.flip_card {
+  background-color: transparent;
+  width: 300px;
+  height: 300px;
+  perspective: 1000px;
+}
+
+.flip_card_inner {
+  // position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+}
+
+.flip_card:focus {
+    outline: 0;
+}
+
+.flip_card:hover .flip_card_inner,
+.flip_card:focus .flip_card_inner{
+  transform: rotateY(180deg);
+}
+
+.flip_card_front,
+.flip_card_back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.flip_card_front {
+  background: linear-gradient(to left, #4364f7, #6fb1fc);
+  color: black;
+  z-index: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.flip_card_back {
+  background: linear-gradient(to right, #4364f7, #6fb1fc);
+  color: white;
+  transform: rotateY(180deg);
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+// h3 {
+//   font-size: 20px;
+//   font-family: Verdana, sans-serif;
+//   font-weight: bold;
+//   color: #fff;
+// }
+
+// **************************************************
