--- a/src/app/homePage/homePageStyle.scss
+++ b/src/app/homePage/homePageStyle.scss
@@ -1,7 +1,19 @@
-.hero_banner {
-    background: linear-gradient(126.85deg, #052c47 -36.13%, #026494 98.05%);
+:root {
+    --primary: #3B8AD2;
+    --secondary: #ff5042;
+    --tertiary: #51AFA7;
+    --white: #ffffff;
+    --text-color-dark: #053247;
+    --bg-color1: linear-gradient(160.85deg, #1e0951 -36.13%, #027c94 98.05%);
+    --bg-color2: #f7f7f8;
+    --bg-color3: #fff;
 }
-.hero_img{
+
+.hero_banner {
+    background-image: var(--bg-color1);
+}
+
+.hero_img {
     max-width: 600px;
     max-height: 600px;
 }
@@ -84,6 +96,61 @@
 
 .css-6zeqf7-JoyTabs-root {
     background-color: transparent;
+}
+
+
+.custom_tab_design .css-d3v7oa-JoyTabs-root {
+    background-color: transparent;
+}
+
+.custom_tab_design .tab_list {
+    box-shadow: none;
+    border-bottom: 1px solid #d0d0d3;
+    border-top: 1px solid #d0d0d3;
+    margin-bottom: 30px;
+    position: sticky;
+    top: 0%;
+}
+
+.custom_tab_design .tab_img {
+    max-width: 40px;
+    max-height: 40px;
+    object-fit: contain;
+    background-position: center;
+    margin-right: 5px;
+}
+
+.custom_tab_design .tab_name {
+    font-size: 18px;
+    font-weight: 600;
+    color: var(--text-color-dark);
+    text-transform: capitalize;
+    padding: 30px 40px;
+    opacity: 0.7;
+    border-left: 1px solid #d0d0d3;
+    border-bottom: 3px solid transparent;
+    transition: all ease-in-out 0.4s;
+    
+
+    &:hover {
+        background-color: #dedfe0f0;
+    }
+
+    &::after {
+        display: none;
+    }
+
+}
+.right_border{
+    border-right: 1px solid #d0d0d3 !important;
+}
+
+.custom_tab_design .tab_name.Mui-selected {
+    background-color: var(--bg-color2);
+    color: var(--text-color-dark);
+    z-index: 1;
+    opacity: 1;
+    border-bottom: 3px solid var(--text-color-dark);
 }
 
 //   ********************************end**********************************
