add-content and responsive

--- a/src/app/header/headerStyle.scss
+++ b/src/app/header/headerStyle.scss
@@ -1,7 +1,19 @@
+:root {
+    --primary: #3B8AD2;
+    --secondary: #ff5042;
+    --tertiary: #51AFA7;
+    --white: #ffffff;
+    --text-color-dark: #053247;
+    --bg-color1: linear-gradient(126.85deg, #1c0547 -36.13%, #027c94 98.05%);
+    --bg-color2: #f7f7f8;
+    --bg-color3: #fff;
+}
+
 .header {
     width: 100%;
     height: 60px;
     color: aliceblue;
+
     .header_tabs ul {
         display: flex;
         align-items: center;
@@ -38,7 +50,8 @@
     // background-color: transparent;
     background: linear-gradient(126.85deg, #052c47 -36.13%, #026494 98.05%);
 }
-.siteLogo{
+
+.siteLogo {
     background-color: #fff;
     color: rgb(23, 77, 94);
     padding: 14px 16px;
@@ -47,14 +60,15 @@
     display: flex;
     line-height: 16px;
     flex-direction: column;
-    span{
+
+    span {
         font-size: 14px;
         font-weight: 400;
     }
 }
 
-.navWrap{
-    .navList{
+.navWrap {
+    .navList {
         display: flex;
         align-items: center;
         list-style: none;
@@ -62,21 +76,27 @@
         grid-gap: 50px;
         font-weight: 500;
         margin: 0;
-        .navLink{
+
+        .navLink {
             text-decoration: none;
             font-weight: 600;
             color: #fff;
         }
-        .navButton{
+
+        .navButton {
             background-color: var(--secondary);
             color: #fff;
-            padding: 15px 25px;
+            padding: 10px 25px;
             border-radius: 6px;
             text-decoration: none;
             font-weight: 600;
+            transition: all ease-in-out 0.3s;
+            &:hover{
+                background-color: #e5281a;
+            }
         }
     }
-} 
+}
 
 
 .siteHeader {
@@ -85,9 +105,11 @@
     padding: 25px 0px;
     transition: all ease-in-out .3s;
     z-index: 100;
-    &.sticky{
-        background: var(--primary);
+
+    &.sticky {
+        backdrop-filter: blur(8px);
+        background-image: linear-gradient(126.85deg, #1c05478a -36.13%, #027c9484 98.05%);
         padding: 15px 0px;
+        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     }
 }
-
