--- a/public/assets/style/customStyle.scss
+++ b/public/assets/style/customStyle.scss
@@ -18,6 +18,14 @@
   }
 }
 
+.top_padding {
+  padding-top: 40px;
+
+  @media (max-width: 767.98px) {
+    padding-top: 30px;
+  }
+}
+
 .sectionPadding2 {
   padding: 50px 0px;
   scroll-margin-top: 50px;
@@ -38,7 +46,8 @@
 .bg_dark {
   background-image: var(--bg-color1);
 }
-.bg_white{
+
+.bg_white {
   background-color: var(--bg-color3);
 }
 
@@ -54,13 +63,153 @@
   font-weight: 700 !important;
 }
 
-.text_20 {
-  font-size: 20px !important;
+
+
+// *****************************common-css***************************
+.text {
+  &-12 {
+    font-size: 12px;
+  }
+
+  &-16 {
+    font-size: 16px;
+
+    @media (max-width: 1400px) {
+      font-size: 15px;
+    }
+
+    @media (max-width: 1200px) {
+      font-size: 14px;
+    }
+  }
+  &-18 {
+    font-size: 18px;
+
+    @media (max-width: 1400px) {
+      font-size: 17px;
+    }
+
+    @media (max-width: 1200px) {
+      font-size: 15px;
+    }
+  }
+
+  &-20 {
+    font-size: 20px;
+
+    @media (max-width: 1400px) {
+      font-size: 18px;
+    }
+
+    @media (max-width: 1200px) {
+      font-size: 16px;
+    }
+  }
+  &-24{
+    font-size: 24px;
+
+    @media (max-width: 1400px) {
+      font-size: 22px;
+    }
+
+    @media (max-width: 1200px) {
+      font-size: 20px;
+    }
+  }
+
 }
 
-.text_24 {
-  font-size: 24px ;
+
+.title {
+
+  &-sm {
+    font-size: 20px;
+    letter-spacing: .5px;
+    line-height: 26px;
+    font-weight: 400;
+    font-family: "DM Sans", "Noto Sans", helvetica, arial, sans-serif;
+
+
+    @media (max-width: 767.98px) {
+      font-size: 18px;
+      line-height: 22px;
+    }
+
+  }
+
+  &-md {
+    font-size: 24px;
+    letter-spacing: .5px;
+
+    @media (max-width: 1200px) {
+      font-size: 22px;
+    }
+
+    @media (max-width: 767.98px) {
+      font-size: 18px;
+    }
+  }
+
+  &-xl {
+    font-size: 36px;
+    letter-spacing: .5px;
+
+    @media (max-width: 1400px) {
+      font-size: 32px;
+    }
+
+    @media (max-width: 1200px) {
+      font-size: 30px;
+    }
+
+    @media (max-width: 767.98px) {
+      font-size: 26px;
+    }
+
+    @media (max-width: 576.98px) {
+      font-size: 22px;
+    }
+  }
+
+  &-xxl {
+    font-size: 48px;
+    line-height: 62.5px;
+
+    @media (max-width: 1400px) {
+      font-size: 38px;
+      line-height: 50.5px;
+    }
+
+    @media (max-width: 1200px) {
+      font-size: 32px;
+      line-height: 40.5px;
+
+    }
+
+    @media (max-width: 767.98px) {
+      font-size: 30px;
+      line-height: 30.5px;
+    }
+  }
 }
+
+.responsive_img {
+  max-width: 100%;
+  height: auto;
+}
+
+.margin_bottom_40 {
+  margin-bottom: 40px;
+
+  @media (max-width: 1200px) {
+    margin-bottom: 30px;
+  }
+}
+.padding_img{
+  padding: 40px;
+}
+
+// *****************************end***********************************
 
 .title_section {
   h1 {
@@ -139,28 +288,29 @@
   }
 
   .img_row {
-    padding: 29px 10px;
+    // padding: 29px 10px;
   }
 
   .marquee_img {
-    margin: 0 20px;
+    margin: 0 45px;
     background-position: center;
-    background-size: contain !important;
-    max-width: 60px;
-    max-height: 60px;
+    max-width: 100%;
+    object-fit: contain;
+    max-height: 55px;
+    height: auto;
   }
 }
 
 .marquee_card {
   background: #fff;
   width: 360px;
-  height: 190px;
+  height: auto;
   border-radius: 4px;
   box-shadow: 0px 10px 60px rgba(3, 17, 44, .15);
   padding: 20px;
   margin: 0 10px;
   color: var(--text-color-dark);
-  height: 100%;
+  max-height: 100%;
 
   .card_profile_img {
     max-width: 40px;
@@ -171,8 +321,6 @@
   }
 
   h5 {
-    font-size: 16px;
-    font-weight: 700;
     margin-bottom: 10px;
   }
 
@@ -188,10 +336,8 @@
 .prime_btn {
   background-color: #ff5042;
   color: #fff;
-  padding: 12px 24px;
+  padding: 13px 24px;
   border-radius: 5px;
-  margin: 10px;
-  font-size: 18px;
   text-transform: capitalize;
   font-weight: 600;
   border: 1px solid #ff5042;
@@ -200,23 +346,27 @@
   &:hover {
     background-color: #ee3326;
   }
+  @media (max-width: 1200px) {
+    padding: 10px 18px;
+  }
 }
 
 .border_btn {
   background-color: transparent;
   color: #fff;
-  padding: 12px 24px;
+  padding: 13px 24px;
   border-radius: 5px;
-  margin: 10px;
-  font-size: 18px;
   text-transform: capitalize;
   font-weight: 600;
   border: 1px solid #fff;
-  transition: all 0.3s;
+  transition: all 0.4s;
 
   &:hover {
-    background-image: var(--bg-color1);
+    background-color:#053247;
     color: var(--bg-color3);
+  }
+  @media (max-width: 1200px) {
+    padding: 10px 18px;
   }
 }
 
@@ -259,11 +409,12 @@
   background-size: cover;
   background-attachment: fixed;
 }
-.content_bg { 
+
+.content_bg {
   backdrop-filter: blur(5px);
   background-color: #0532476a;
-}  
-  
+}
+
 
 // *****************************************************************
 
@@ -288,11 +439,11 @@
 }
 
 .flip_card:focus {
-    outline: 0;
+  outline: 0;
 }
 
 .flip_card:hover .flip_card_inner,
-.flip_card:focus .flip_card_inner{
+.flip_card:focus .flip_card_inner {
   transform: rotateY(180deg);
 }
 
@@ -321,6 +472,24 @@
   justify-content: center;
   align-items: center;
 }
+.time_icon{
+  width: 40px;
+  height: 40px;
+  background-color: #3fa757;
+  padding: 2px;
+  color: #fff;
+  border-radius: 100px;
+ margin-right: 15px;
+}
+.close_icon{
+  background-color: #e84f4f;
+}
+.v_line{
+  width: 1px;
+  height: 70px;
+  background-color: #cecfcf;
+}
+
 // h3 {
 //   font-size: 20px;
 //   font-family: Verdana, sans-serif;
