--- a/src/app/homePage/homePageStyle.scss
+++ b/src/app/homePage/homePageStyle.scss
@@ -13,25 +13,15 @@
     background-image: var(--bg-color1);
 }
 
-.hero_img {
-    max-width: 600px;
-    max-height: 600px;
-}
+.hero_heading {
+    h2 {
+        font-weight: 700;
+        margin-bottom: 30px;
 
-.hero_heading h2 {
-    font-size: 48px;
-    font-weight: 700;
-    color: #fff;
-    line-height: 62.5px;
-    margin-bottom: 30px;
-
-}
-
-.hero_heading p {
-    color: #fff;
-    font-size: 20px;
-    font-weight: 400;
-    line-height: 26px;
+        @media (max-width: 1200px) {
+            margin-bottom: 15px;
+        }
+    }
 }
 
 .rotate_item {
@@ -54,11 +44,17 @@
     padding-top: 20px;
 }
 
+.margin_top_992 {
+    @media (max-width: 992px) {
+        margin-top: 40px;
+    }
+}
+
 .tab_btns {
     padding: 20px;
     display: flex;
     align-items: flex-start;
-    max-width: 610px;
+    width: 100%;
     background-color: var(--bg-color3) !important;
     color: var(--text-color-dark);
 
@@ -72,6 +68,10 @@
         font-weight: 400;
         font-size: 16px;
         margin-bottom: 0;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        display: -webkit-box;
+        overflow: hidden;
     }
 }
 
@@ -130,7 +130,8 @@
     border-left: 1px solid #d0d0d3;
     border-bottom: 3px solid transparent;
     transition: all ease-in-out 0.4s;
-    
+
+
 
     &:hover {
         background-color: #dedfe0f0;
@@ -141,7 +142,8 @@
     }
 
 }
-.right_border{
+
+.right_border {
     border-right: 1px solid #d0d0d3 !important;
 }
 
@@ -180,5 +182,18 @@
         span {
             font-weight: 700;
         }
+    }
+}
+
+.add_img {
+    width: 100%;
+    max-width: 240px;
+    height: auto;
+    max-height: 100px;
+    object-fit: contain;
+    object-position: center;
+
+    @media (max-width: 1200px) {
+        max-width: 180px;
     }
 }
