--- a/src/app/homePage/homePageStyle.scss
+++ b/src/app/homePage/homePageStyle.scss
@@ -102,14 +102,22 @@
 .custom_tab_design .css-d3v7oa-JoyTabs-root {
     background-color: transparent;
 }
+.custom_tab_design .css-64esqk-JoyTabPanel-root{
+    @media (max-width: 1200px) {
+       padding: 0%;
+    }
+}
 
 .custom_tab_design .tab_list {
     box-shadow: none;
     border-bottom: 1px solid #d0d0d3;
     border-top: 1px solid #d0d0d3;
     margin-bottom: 30px;
-    position: sticky;
-    top: 0%;
+
+    @media (max-width: 767.95px) {
+        border: none;
+        padding: 0;
+    }
 }
 
 .custom_tab_design .tab_img {
@@ -118,10 +126,18 @@
     object-fit: contain;
     background-position: center;
     margin-right: 5px;
+
+    @media (max-width: 1200px) {
+        max-width: 30px;
+        max-height: 30px;
+    }
+
+    @media (max-width: 767.95px) {
+        margin: 0;
+    }
 }
 
 .custom_tab_design .tab_name {
-    font-size: 18px;
     font-weight: 600;
     color: var(--text-color-dark);
     text-transform: capitalize;
@@ -131,7 +147,21 @@
     border-bottom: 3px solid transparent;
     transition: all ease-in-out 0.4s;
 
+    @media (max-width: 1200px) {
+        padding: 20px 30px;
+    }
 
+    @media (max-width:767.98px) {
+        padding: 12px 18px;
+        display: flex;
+        flex-direction: column;
+        border-left: none;
+        border-bottom: 3px solid #d0d0d3;
+    }
+    @media (max-width:400px) {
+        padding: 10px;
+        font-size: 13px;
+    }
 
     &:hover {
         background-color: #dedfe0f0;
@@ -145,6 +175,11 @@
 
 .right_border {
     border-right: 1px solid #d0d0d3 !important;
+
+    @media (max-width:767.98px) {
+        border-right: none !important;
+
+    }
 }
 
 .custom_tab_design .tab_name.Mui-selected {
@@ -153,6 +188,10 @@
     z-index: 1;
     opacity: 1;
     border-bottom: 3px solid var(--text-color-dark);
+
+    @media (max-width:767.98px) {
+        background-color: transparent;
+    }
 }
 
 //   ********************************end**********************************
