--- a/public/assets/style/customStyle.scss
+++ b/public/assets/style/customStyle.scss
@@ -51,6 +51,10 @@
   background-image: var(--bg-color1);
 }
 
+.bg_dark_1 {
+  background-color: #053247;
+}
+
 .bg_white {
   background-color: var(--bg-color3);
 }
@@ -385,6 +389,7 @@
   @media (max-width: 1200px) {
     padding: 10px 18px;
   }
+
   @media (max-width: 767.98px) {
     padding: 6px 12px;
   }
@@ -455,7 +460,6 @@
   background-color: #0532476a;
 }
 
-
 // *****************************************************************
 
 // ***********************flip-card************************
@@ -467,7 +471,6 @@
 }
 
 .flip_card_inner {
-  // position: relative;
   width: 100%;
   height: 100%;
   text-align: center;
@@ -538,11 +541,76 @@
   background-color: #cecfcf;
 }
 
-// h3 {
-//   font-size: 20px;
-//   font-family: Verdana, sans-serif;
-//   font-weight: bold;
-//   color: #fff;
-// }
-
 // **************************************************
+
+// *********************************bg-card-start*****************************
+.bgCard {
+  &-card {
+    border: 0;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    border-bottom: 1px solid #cecfcf6d;
+  }
+
+  &-content {
+    position: absolute;
+    bottom: -14%;
+    left: 20px;
+    right: 20px;
+    -webkit-backdrop-filter: blur(3px);
+    backdrop-filter: blur(3px);
+    padding: 12px;
+    background-color: #f1f5ff37;
+    border: 1px solid #cecfcf6d;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    border-radius: 10px;
+  }
+
+  &-info {
+    font-size: 13px;
+    font-weight: 100;
+    line-height: 15px;
+    color: #cecfcf;
+    margin-bottom: 0;
+  }
+
+  &-title {
+    position: absolute;
+    bottom: 60px;
+    left: 20px;
+  }
+
+  &-profile_img {
+    max-width: 20px;
+    max-height: 20px;
+    border-radius: 100px;
+  }
+
+  &-rating_row {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  &-star {
+    img {
+
+      filter: drop-shadow(-5px 4px 18px #000000);
+    }
+  }
+
+  &-rating_up {
+    background-color: #3fa757;
+    padding: 2px 10px;
+    font-size: 12px;
+    font-weight: 600;
+    color: var(--bg-color3);
+    max-width: 50px;
+    border-radius: 100px;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  }
+}
+
+// ---------------------------------bg-card-end----------------------------
