--- a/src/app/pages/homePage/homePageStyle.scss
+++ b/src/app/pages/homePage/homePageStyle.scss
@@ -75,7 +75,7 @@
     }
 }
 
-.css-1mad5hb-JoyTab-root[aria-selected="true"],
+.side_custom_tabs .css-1mad5hb-JoyTab-root[aria-selected="true"],
 .css-1q8wenp-JoyTab-root[aria-selected="true"] {
     box-shadow: 0px 10px 60px rgba(3, 17, 44, .15);
     padding: 20px;
@@ -85,20 +85,20 @@
     z-index: 1;
 }
 
-.css-1q8wenp-JoyTab-root::after,
+.side_custom_tabs .css-1q8wenp-JoyTab-root::after,
 .css-1mad5hb-JoyTab-root::after {
     background-color: transparent;
 }
 
-.css-64esqk-JoyTabPanel-root {
+.side_custom_tabs .css-64esqk-JoyTabPanel-root {
     padding: 0 60px;
 }
 
-.css-6zeqf7-JoyTabs-root {
+.side_custom_tabs .css-6zeqf7-JoyTabs-root {
     background-color: transparent;
 }
 
-
+// -----
 .custom_tab_design .css-d3v7oa-JoyTabs-root {
     background-color: transparent;
 }
