sitemap and robots-txt

--- a/public/assets/style/customStyle.scss
+++ b/public/assets/style/customStyle.scss
@@ -614,3 +614,8 @@
 }
 
 // ---------------------------------bg-card-end----------------------------
+.banner_top{
+  background-image: var(--bg-color1);
+  height: 400px;
+  width: 100%;
+}
