--- a/src/app/pages/homePage/homePageStyle.scss
+++ b/src/app/pages/homePage/homePageStyle.scss
@@ -75,7 +75,7 @@
     }
 }
 
-.side_custom_tabs .css-1mad5hb-JoyTab-root[aria-selected="true"],
+.css-1mad5hb-JoyTab-root[aria-selected="true"],
 .css-1q8wenp-JoyTab-root[aria-selected="true"] {
     box-shadow: 0px 10px 60px rgba(3, 17, 44, .15);
     padding: 20px;
@@ -85,22 +85,22 @@
     z-index: 1;
 }
 
-.side_custom_tabs .css-1q8wenp-JoyTab-root::after,
+.css-1q8wenp-JoyTab-root::after,
 .css-1mad5hb-JoyTab-root::after {
-    background-color: transparent;
+    background-color: transparent !important;
 }
 
-.side_custom_tabs .css-64esqk-JoyTabPanel-root {
+.css-64esqk-JoyTabPanel-root {
     padding: 0 60px;
 }
 
-.side_custom_tabs .css-6zeqf7-JoyTabs-root {
-    background-color: transparent;
+.css-6zeqf7-JoyTabs-root {
+    background-color: transparent !important;
 }
 
-// -----
+
 .custom_tab_design .css-d3v7oa-JoyTabs-root {
-    background-color: transparent;
+    background-color: transparent !important;
 }
 .custom_tab_design .css-64esqk-JoyTabPanel-root{
     @media (max-width: 1200px) {
