--- a/public/assets/style/customStyle.scss
+++ b/public/assets/style/customStyle.scss
@@ -575,8 +575,9 @@
 
   &-title {
     position: absolute;
-    bottom: 60px;
-    left: 20px;
+    top: -45px;
+    left: 0px;
+    text-transform: capitalize;
   }
 
   &-profile_img {
@@ -618,4 +619,20 @@
   background-image: var(--bg-color1);
   height: 400px;
   width: 100%;
+}
+
+.fixed{
+  &-background{
+    background-image: url(/images/top-banner.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    max-width: 100%;
+  }
+  &-content{
+    height: 400px;
+    backdrop-filter: blur(1px);
+    // background-color: rgba(5, 50, 71, 0.4156862745);
+    max-width: 100%;
+  }
 }
