swiper and service-menu

--- a/public/assets/style/customStyle.scss
+++ b/public/assets/style/customStyle.scss
@@ -9,16 +9,6 @@
   --bg-color3: #fff;
 }
 
-
-*{
-  margin: 0;
-  padding: 0;
-}
-
-img {
-  max-width: 100%;
-  height: auto;
-}
 .sectionPadding {
   padding: 100px 0px;
   scroll-margin-top: 100px;
@@ -345,15 +335,15 @@ img {
   -o-transition: height 0.7s ease-out;
   /* Opera */
 
-  &:hover {
-    height: 300px;
-    transition: height 0.7s ease-out;
-  }
+  // &:hover {
+  //   height: 300px;
+  //   transition: height 0.7s ease-out;
+  // }
 
-  &:hover span {
-    -webkit-line-clamp: initial;
-    transition: height 0.7s ease-out;
-  }
+  // &:hover span {
+  //   -webkit-line-clamp: initial;
+  //   transition: height 0.7s ease-out;
+  // }
 
   .card_profile_img {
     max-width: 40px;
@@ -625,28 +615,6 @@ img {
 }
 
 // ---------------------------------bg-card-end----------------------------
-.banner_top {
-  background-image: var(--bg-color1);
-  height: 400px;
-  width: 100%;
-}
-
-.fixed {
-  &-background {
-    background-image: url(/images/banner.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    max-width: 100%;
-  }
-
-  &-content {
-    height: 400px;
-    backdrop-filter: blur(1px);
-    // background-color: rgba(5, 50, 71, 0.4156862745);
-    max-width: 100%;
-  }
-}
 
 // *******************inner-banner-start*********************
 .banner {
@@ -659,6 +627,9 @@ img {
   }
 
   &-img_box {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 640px;
     height: 400px;
     background-size: cover;
@@ -667,11 +638,35 @@ img {
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
   }
 
-  &-content_max_width {
-    max-width: 51%;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
+  &-z_index {
+    h1{
+      z-index: 9 !important;
+    }
+   
   }
 }
 // ---------------------------inner-banner-end-------------------------------
+
+// ************************scroll-start**********************************
+/* width */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px rgba(128, 128, 128, 0.783); 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #c9cbcbd4; 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #204a5fdf; 
+}
+// ----------------------------end---------------------------------------
