--- a/src/app/header/headerStyle.scss
+++ b/src/app/header/headerStyle.scss
@@ -151,7 +151,7 @@
 }
 
 .megaMenuWrapper {
-    width: 840px;
+    width: 810px;
     padding: 8px;
     box-shadow: 0 0 50px 0 rgba(0, 0, 0, .25);
     z-index: 9 !important;
@@ -165,7 +165,17 @@
     position: absolute;
     top: 8px;
     right: 8px;
+    
+}
+.background_set{
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    max-width: 530px;
+    height: 252px;
     background-color: var(--bg-color3);
+    border-radius: 10px;
+    width: 100%;
 }
 
 .hover_box_layout {
@@ -181,13 +191,16 @@
 
     .data_box_col {
         width: 100%;
-        max-width: 560px;
+        max-width: 530px;
+        max-height: 250px;
+        padding: 10px 0;
         // height: 300px;
         // box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
         border-radius: 10px;
         display: flex;
         flex-wrap: wrap;
-        gap: 10px;
+        gap: 12px;
+        overflow: auto;
         // background-color: var(--bg-color3);
 
     }
@@ -217,6 +230,10 @@
             box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
         }
     }
+    .active_tab{
+        background-color: var(--bg-color3);
+        box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    }
 
     .child_hover_data {
         padding: 4px 12px;
@@ -224,6 +241,7 @@
         width: 230px;
         display: flex;
         align-items: center;
+        cursor: pointer;
 
         h6 {
             font-weight: 600;
@@ -250,4 +268,52 @@
 
     }
 
+}
+.mobile{
+    &-menu{
+        width: 180px;
+    }
+    &-nav_list{
+        padding: 0;
+        li{
+            list-style: none;
+            padding: 8px 18px;
+            width: 100%;
+            cursor: pointer;
+            border-left: 4px solid transparent;
+           
+        }
+        .nav_link{
+            text-decoration: none;
+            color: var(--text-color-dark);
+            font-weight: 500;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+
+            .icon{
+                font-size: 22px;
+            }
+            
+        }
+        // .navButton {
+        //     color: var(--text-color-dark);
+        //     text-decoration: none;
+        //     font-weight: 500;
+        //     padding: 6px 22px;
+        //     border: 1px solid #d7d7da;
+        // }
+    }
+    &-active_menu{
+        background-color: var(--bg-color2);
+        border-left: 4px solid var(--text-color-dark) !important;
+        // box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    }
+}
+.close_button{
+    font-size: 25px;
+    color: var(--text-color-dark);
+    text-align: end;
+    padding-right: 8px;
+    cursor: pointer;
 }
