--- a/src/app/header/headerStyle.scss
+++ b/src/app/header/headerStyle.scss
@@ -158,16 +158,17 @@
     background-color: var(--bg-color2);
     border-radius: 10px;
     transition: all ease-in-out 0.5s;
-  
+
 }
 
 .child_hover_data_position {
     position: absolute;
     top: 8px;
     right: 8px;
-    
+
 }
-.background_set{
+
+.background_set {
     position: absolute;
     top: 8px;
     right: 8px;
@@ -230,7 +231,8 @@
             box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
         }
     }
-    .active_tab{
+
+    .active_tab {
         background-color: var(--bg-color3);
         box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     }
@@ -269,21 +271,27 @@
     }
 
 }
-.mobile{
-    &-menu{
-        width: 180px;
+
+.mobile {
+    &-menu {
+        max-width: 330px;
+        width: auto;
+        transition: all 0.4s;
     }
-    &-nav_list{
+
+    &-nav_list {
         padding: 0;
-        li{
+
+        li {
             list-style: none;
-            padding: 8px 18px;
-            width: 100%;
+            padding: 8px 30px 8px 18px;
+            min-width: 270px;
             cursor: pointer;
             border-left: 4px solid transparent;
-           
+
         }
-        .nav_link{
+
+        .nav_link {
             text-decoration: none;
             color: var(--text-color-dark);
             font-weight: 500;
@@ -291,11 +299,10 @@
             align-items: center;
             gap: 10px;
 
-            .icon{
-                font-size: 22px;
-            }
-            
+
+
         }
+
         // .navButton {
         //     color: var(--text-color-dark);
         //     text-decoration: none;
@@ -304,16 +311,63 @@
         //     border: 1px solid #d7d7da;
         // }
     }
-    &-active_menu{
+
+    &-icon {
+        font-size: 22px;
+    }
+
+    &-active_menu {
         background-color: var(--bg-color2);
         border-left: 4px solid var(--text-color-dark) !important;
         // box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     }
+
+    &-accordion_menu .accordion-button {
+        background-color: transparent;
+        font-size: 16px;
+        font-weight: 500;
+        color: var(--text-color-dark);
+        padding: 0;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        &:focus{
+            box-shadow: none;
+        }
+    }
+
+    &-accordion_menu .accordion-item {
+        border: none;
+    }
+
+    &-accordion_menu .accordion-button:not(.collapsed) {
+        box-shadow: none;
+    }
+    &-offcanvas{
+        z-index: 22222;
+        height: auto !important;
+        max-height: 50% !important;
+       
+        .close_bar{
+            background-color: var(--bg-color3);
+            border-bottom: 1px solid #d4d6d6ee;
+        }
+        
+    }
 }
-.close_button{
+.over_flow{
+    overflow-y: auto;
+}
+
+.close_button {
     font-size: 25px;
     color: var(--text-color-dark);
     text-align: end;
     padding-right: 8px;
     cursor: pointer;
+}
+.green_text{
+    font-size: 16px;
+    color: #308f3f;
+    font-weight: 500;
 }
