--- a/public/assets/style/customStyle.scss
+++ b/public/assets/style/customStyle.scss
@@ -277,7 +277,7 @@
 
   .brand_logo {
     max-width: 50px;
-    max-height: 50px;
+    height: auto;
     background-size: contain;
     background-position: center;
     margin-bottom: 10px;
