--- a/public/assets/style/customStyle.scss
+++ b/public/assets/style/customStyle.scss
@@ -1,13 +1,44 @@
 :root {
   --primary: #3B8AD2;
   --secondary: #ff5042;
-  --tertiary: #51AFA7;
-  --white: #ffffff;
+  --darkBlue:#091d2b;
   --text-color-dark: #053247;
   --bg-color1: linear-gradient(126.85deg, #1c0547 -36.13%, #027c94 98.05%);
   --bg-color2: #f7f7f8;
   --bg-color3: #fff;
 }
+
+a,button{
+  transition: all ease-in-out .3s;
+}
+
+
+.bg_gray {
+  background-color: var(--bg-color2);
+}
+
+.bg_dark {
+  background-image: var(--bg-color1);
+}
+
+.bg_dark_1 {
+  background-color: #053247;
+}
+
+.bg_white {
+  background-color: var(--bg-color3);
+}
+
+
+.dark_font {
+  color: var(--text-color-dark) !important;
+}
+
+
+.container_1000 {
+  max-width: 1000px !important;
+}
+
 
 .sectionPadding {
   padding: 100px 0px;
@@ -39,37 +70,7 @@
   }
 }
 
-.container_1000 {
-  max-width: 1000px !important;
-}
 
-.bg_gray {
-  background-color: var(--bg-color2);
-}
-
-.bg_dark {
-  background-image: var(--bg-color1);
-}
-
-.bg_dark_1 {
-  background-color: #053247;
-}
-
-.bg_white {
-  background-color: var(--bg-color3);
-}
-
-.white_font {
-  color: #fff;
-}
-
-.dark_font {
-  color: var(--text-color-dark) !important;
-}
-
-.font_700 {
-  font-weight: 700 !important;
-}
 
 
 
@@ -78,53 +79,23 @@
   &-12 {
     font-size: 12px;
   }
-
+  &-14 {
+    font-size: 14px;
+  }
   &-16 {
     font-size: 16px;
-
-    @media (max-width: 1400px) {
-      font-size: 15px;
-    }
-
-    @media (max-width: 1200px) {
-      font-size: 14px;
-    }
   }
-
   &-18 {
     font-size: 18px;
-
-    @media (max-width: 1400px) {
-      font-size: 17px;
-    }
-
-    @media (max-width: 1200px) {
-      font-size: 15px;
-    }
   }
-
   &-20 {
     font-size: 20px;
-
-    @media (max-width: 1400px) {
-      font-size: 18px;
-    }
-
-    @media (max-width: 1200px) {
-      font-size: 16px;
-    }
   }
-
+  &-22{
+    font-size: 22px;
+  }
   &-24 {
     font-size: 24px;
-
-    @media (max-width: 1400px) {
-      font-size: 22px;
-    }
-
-    @media (max-width: 1200px) {
-      font-size: 20px;
-    }
   }
 
 }
@@ -216,9 +187,6 @@
   }
 }
 
-.padding_hero_img {
-  padding: 40px;
-}
 
 .padding_img {
   padding: 30px;
@@ -639,12 +607,13 @@
   }
 
   &-z_index {
-    h1{
+    h1 {
       z-index: 9 !important;
     }
-   
+
   }
 }
+
 // ---------------------------inner-banner-end-------------------------------
 
 // ************************scroll-start**********************************
@@ -655,18 +624,19 @@
 
 /* Track */
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px rgba(128, 128, 128, 0.783); 
+  box-shadow: inset 0 0 5px rgba(128, 128, 128, 0.783);
   border-radius: 10px;
 }
- 
+
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #c9cbcbd4; 
+  background: #c9cbcbd4;
   border-radius: 10px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #204a5fdf; 
+  background: #204a5fdf;
 }
+
 // ----------------------------end---------------------------------------
