--- a/src/app/header/headerStyle.scss
+++ b/src/app/header/headerStyle.scss
@@ -1,13 +1,3 @@
-:root {
-    --primary: #3B8AD2;
-    --secondary: #ff5042;
-    --tertiary: #51AFA7;
-    --white: #ffffff;
-    --text-color-dark: #053247;
-    --bg-color1: linear-gradient(126.85deg, #1c0547 -36.13%, #027c94 98.05%);
-    --bg-color2: #f7f7f8;
-    --bg-color3: #fff;
-}
 
 .header {
     width: 100%;
@@ -51,9 +41,6 @@
     background: linear-gradient(126.85deg, #052c47 -36.13%, #026494 98.05%);
 }
 
-.siteLogo {
-
-}
 
 .navWrap {
     .navList {
@@ -100,12 +87,11 @@
     padding: 10px 0px;
     transition: all ease-in-out .3s;
     z-index: 100;
-    background: #ffffff85;
     &.sticky {
         backdrop-filter: blur(8px);
         background: #ffffff95;
         padding: 10px 0px;
-        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+        background: rgba(0, 100, 148, .84) ;
     }
 }
 
