--- a/public/assets/style/customStyle.scss
+++ b/public/assets/style/customStyle.scss
@@ -70,7 +70,9 @@ a,button{
   }
 }
 
-
+img{
+  max-width: 100%;
+}
 
 
 
@@ -105,15 +107,13 @@ a,button{
 
   &-sm {
     font-size: 20px;
-    letter-spacing: .5px;
-    line-height: 26px;
     font-weight: 400;
-    font-family: "DM Sans", "Noto Sans", helvetica, arial, sans-serif;
-
-
-    @media (max-width: 767.98px) {
+    @media (max-width: 991.98px) {
       font-size: 18px;
       line-height: 22px;
+    }
+    @media (max-width: 767.98px) {
+      font-size: 16px;
     }
 
   }
