--- a/src/app/footer/footerStyle.scss
+++ b/src/app/footer/footerStyle.scss
@@ -1,93 +1,114 @@
-.siteFooter{
+.siteFooter {
     background-color: #0a2537;
     color: #fff;
-    .footer_top{
+
+    .footer_top {
         padding: 60px 0;
         font-size: 15px;
-        .footerTitle{
+
+        .footerTitle {
             font-weight: 700;
             font-size: 20px;
             margin-bottom: 15px;
         }
-        ul{
+
+        ul {
             list-style: none;
             padding: 0;
-            li{
+
+            li {
                 margin-bottom: 15px;
             }
-            a{
+
+            a {
                 color: #fff;
                 text-decoration: none;
-                text-transform: capitalize;
-                &:hover{
+
+                &:hover {
                     color: var(--secondary);
                 }
             }
         }
-        .contactInfo{
+
+        .contactInfo {
             max-width: 300px;
 
-            li{
+            li {
                 position: relative;
                 padding-left: 25px;
-                svg{
+
+                svg {
                     position: absolute;
                     left: 0;
                     top: 5px;
                 }
             }
         }
-        .awardsList{
+
+        .awardsList {
             display: flex;
             flex-wrap: wrap;
             align-items: center;
             gap: 15px;
             justify-content: flex-end;
-            img{
+
+            img {
                 height: 45px;
                 width: auto;
             }
         }
+
         .columnList {
-            display: flex;
-            justify-content: space-between;
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
             gap: 40px;
             flex-wrap: wrap;
+
+            @media (max-width: 767.98px) {
+                grid-template-columns: repeat(1, 1fr);
+            }
         }
     }
-    .footer_copyright{
+
+    .footer_copyright {
         font-size: 14px;
         background: #091d2b;
         padding: 30px 0;
         opacity: .65;
         text-align: justify;
-        .content-info{
+
+        .content-info {
             display: flex;
             justify-content: space-between;
-            .links{
+
+            .links {
                 display: flex;
                 gap: 10px 30px;
                 flex-wrap: wrap;
-                a{
+
+                a {
                     color: #fff;
                     text-decoration: none;
-                    &:hover{
+
+                    &:hover {
                         text-decoration: underline;
                     }
                 }
             }
         }
     }
+
     .socialMediaList {
         grid-gap: 10px;
         align-items: center;
         display: inline-flex;
         flex-wrap: wrap;
         list-style: none;
-        li{
+
+        li {
             a {
                 align-items: center;
-                background:#fff;
+                background: #fff;
                 border-radius: 50%;
                 color: #000;
                 cursor: pointer;
@@ -98,14 +119,13 @@
                 line-height: 1;
                 text-align: center;
                 width: 42px;
-                
-                &:hover{
+
+                &:hover {
                     color: #fff;
                     background: var(--secondary);
                 }
             }
         }
-    
+
     }
 }
-
